antimatter_dimensions: fix PWA
Signed-off-by: FraSharp <f.duca00@gmail.com>

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Antimatter Dimensions",
   "short_name": "AD",
   "description": "A game about huge numbers and watching them go up",
-  "start_url": "/",
+  "start_url": "/AntimatterDimensions/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
